--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <figure>
 
-<img src="img/Hanh.jpg" class="intro-img"alt="Hanh"/>
+<img src="Hanh.jpg" class="intro-img"alt="Hanh"/>
 <figcaption class="right-alignment">
   Mann on Unsplash</figcaption>
 </figure>
@@ -77,7 +77,7 @@
       <!-- Left column-->
       <div class="col-sm">
   <figure>
-  <img src="img/cosmetics.jpg" alt="Cosmetics"
+  <img src="cosmetics.jpg" alt="Cosmetics"
   <figcaption class="right-alignment">
     The Honest Company on Unsplash</figcaption>
   </figure>
@@ -134,7 +134,7 @@
 
 <div class="col-sm">
   <figure>
-  <img src="img/dashboard-app.jpg" alt="Cosmetics"
+  <img src="dashboard-app.jpg" alt="Cosmetics"
   <figcaption class="right-alignment">
     Photo by José Alejandro Cuffia on Unsplash
 </figcaption>
@@ -153,7 +153,7 @@
       <!-- Left column-->
       <div class="col-sm">
 <figure>
-<img src="img/ipad-app.jpg" alt="iPad app"
+<img src="ipad-app.jpg" alt="iPad app"
 <figcaption class="right-alignment"  >
   Photo by José Alejandro Cuffia on Unsplash
 </figcaption>
